--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:noNamespaceSchemaLocation="../../../engine/Shopware/Components/Plugin/schema/plugin.xsd">
-    <label lang="de">EmzStagingEnvironmentDeluxe</label>
-    <label lang="en">EmzStagingEnvironmentDeluxe</label>
+    <label lang="de">Staging Deluxe</label>
+    <label lang="en">Staging Deluxe</label>
     <version>1.0.0</version>
     <copyright>(c) by 8mylez.com</copyright>
     <license>proprietary</license>
