Add new service, refactor some code and clean up a little bit

--- a/plugin.xml
+++ b/plugin.xml
@@ -6,8 +6,8 @@
     <version>1.0.0</version>
     <copyright>(c) by 8mylez.com</copyright>
     <license>proprietary</license>
-    <link>http://store.8mylez.com</link>
-    <author>http://8mylez.com</author>
+    <link>https://8mylez.com</link>
+    <author>8mylez.com</author>
 
     <compatibility minVersion="5.2.0" />
 
